# ezstorage

./: .gitignore  LICENSE  NOTE.md  README.md  auto.py  data.db  idea.py  main.py  pyproject.toml  setup.cfg  temp.txt  test.db  test.py  version.py
.github/workflows/: publish.yml
classdb/: __init__.py  costants.py
classdb/sqlite/: database.py  decorator.py  reader.py
docs/: READER.MD  README.md  SQLITE.md  TYPES.md
examples/: sqlite_basics.py
ezstorage/: __init__.py  reader.py
ezstorage/sqlite/: __init__.py  database.py  decorator.py  util.py
ezstorages/: __init__.py  constants.py  decorators.py  sqlite.py
liteclass/: __init__.py  _init.py  _str.py  constants.py  database.py  primaryKey.py
src/ezstorage/: __init__.py  constants.py  decorators.py  table.py  tokenizer.py
src/ezstorage/providers/: __init__.py  __template__.py  sqlite.py
src/ezstorage/tokenizer/: __init__.py  token.py  tokenizer.py  types.py
src/ezstorage/types/: __template__.py
tests/: database.py  expression.py  global.py  inizialization.py  magic.py  main.py  sqlite.py  tokenizer.py  tokens.py  types.py
