[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezstorage"
version = "0.0.1"
authors = [
  { name="sau1707", email="lsaurwein@ethz.ch" },
]
description = "An easy way to handle various storages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Sau1707/ezstorage"
"Bug Tracker" = "https://github.com/Sau1707/ezstorage/issues"