[project]
name = "ezstorages"
description = "Easy storage handler"
version = "0.0.1"
authors = [
    { name = "Sau1707" }
]

dependencies = [

]

license = { file = "LICENSE" }
requires-python = ">= 3.8"
readme = "README.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"