[project]
name = "ezstorages"
description = "Easy storage handler"
version = "0.0.2"
dependencies = []
requires-python = ">= 3.8"
readme = "README.md"
[[project.authors]]
name = "Sau1707"

[build-system]
requires = [ "setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE"
