[metadata]
name = ezstorage
author = Sau1707
author_email = leonardo.saurwein@gmail.com
description = Easy storage handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sau1707/ezstorage
project_urls =
    Bug Tracker = https://github.com/sau1707/ezstorage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ezstorage
python_requires = >=3.6